Implemented DatabaseProcessor for creating table